[package]
name = "hcl"
version = "0.1.0"
authors = ["Oleksandr Kuvshynov <661042+okuvshynov@users.noreply.github.com>"]
edition = "2018"

[dependencies]
assert_approx_eq = "1.1.0"
clap = "2.33.0"
csv = "1.1"
failure = "0.1.6"
tui = { version = "0.8.0", features = ["termion"], default-features = false }
termion = "1.5.3"